--- a/app/assets/scss/components/_navbar.scss
+++ b/app/assets/scss/components/_navbar.scss
@@ -105,7 +105,7 @@ nav {
             overflow: hidden;
             ul {
                 position: relative;
-                float: right;
+                float: left;
                 list-style: none;
                 margin: 0;
                 padding: 0;
