Add bottons to musica template

--- a/app/templates/partial/header.html
+++ b/app/templates/partial/header.html
@@ -43,8 +43,8 @@
         <div class="top">
             <div class="container">
                 <a class="logo">LOGO</a>
-                <!-- <a href="#" class="feature-button waves-effect waves-white">Feature Button</a> -->
                 <input type="search" class="feature-button waves-effect waves-white" placeholder="Procurar cifra">
+                <a href="#">Enviar cifra</a>
             </div>
         </div>
 
@@ -59,7 +59,7 @@
                         <a href="#" class="waves-effect waves-white">Artistas</a>
                     </li>
                     <li>
-                        <a href="#" class="waves-effect waves-white">Top Cifras</a>
+                        <a href="#" class="waves-effect waves-white">Top cifras</a>
                     </li>
                     <li>
                         <a href="#" class="waves-effect waves-white">Momentos</a>
