--- a/app/templates/partial/musica-sidebar.html
+++ b/app/templates/partial/musica-sidebar.html
@@ -4,15 +4,20 @@
 <div class="cifra-options">
     <ul>
         <li class="option">
-            Cifra Simplificada
-        </li>
-        <li class="option">
             Auto Rolagem
         </li>
         <li class="option">
             <span class="option-before">-</span>
             Fonte
             <span class="option-after">+</span>
+        </li>
+        <li class="option">
+            <span class="option-before">-</span>
+            ½ Tom
+            <span class="option-after">+</span>
+        </li>
+        <li class="option">
+            Imprimir
         </li>
     </ul>
 </div>
