--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -16,14 +16,14 @@
 			<div class="cifra-options">
 				<ul>
 					<li class="option">
-						Cifra Simplificada
+						<span class="type-option">Cifra Simplificada</span>
 					</li>
 					<li class="option">
-						Auto Rolagem
+						<span class="type-option">Auto Rolagem</span>
 					</li>
 					<li class="option">
 						<span class="option-before">-</span>
-						Fonte
+						<span class="type-option">Fonte</span>
 						<span class="option-after">+</span>
 					</li>
 				</ul>
