--- a/app/templates/partial/musica-sidebar.html
+++ b/app/templates/partial/musica-sidebar.html
@@ -4,20 +4,20 @@
 <div class="cifra-options">
     <ul>
         <li class="option">
-            Auto Rolagem
+            <span class="type-option">Auto Rolagem</span>
         </li>
         <li class="option">
             <span class="option-before">-</span>
-            Fonte
+            <span class="type-option">Fonte</span>
             <span class="option-after">+</span>
         </li>
         <li class="option">
             <span class="option-before">-</span>
-            ½ Tom
+            <span class="type-option">½ Tom</span>
             <span class="option-after">+</span>
         </li>
         <li class="option">
-            Imprimir
+            <span class="type-option">Imprimir</span>
         </li>
     </ul>
 </div>
