--- a/app/assets/scss/generic/_generic.scss
+++ b/app/assets/scss/generic/_generic.scss
@@ -2,9 +2,10 @@
 
 * {
     box-sizing: border-box;
+    font-family: $font;
+    font-size: 16px;
     margin: 0;
     padding: 0;
-    font-size: 16px;
 }
 
 html,
