--- a/app/templates/partial/header.html
+++ b/app/templates/partial/header.html
@@ -42,9 +42,8 @@
         <label for="mobile-nav-check" class="burger"></label>
         <div class="top">
             <div class="container">
-                <a class="logo">LOGO</a>
+                <a class="logo" href="/">LOGO</a>
                 <input type="search" class="feature-button waves-effect waves-white" placeholder="Procurar cifra">
-                <a href="#">Enviar cifra</a>
             </div>
         </div>
 
@@ -63,6 +62,9 @@
                     </li>
                     <li>
                         <a href="#" class="waves-effect waves-white">Momentos</a>
+                    </li>
+                    <li>
+                        <a href="#" class="waves-effect waves-white">Envie-nos uma cifra!</a>
                     </li>
                 </ul>
             </div>
