--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -17,6 +17,7 @@
 @import "components/content";
 @import "components/tablatura";
 @import "components/cifra-options";
+@import "components/music-content";
 
 
 @import "trumps/trumps";
