--- a/app/templates/musica.html
+++ b/app/templates/musica.html
@@ -14,10 +14,12 @@
 					{% include 'partial/musica-sidebar.html' %}
 				</aside>
 
-				<main class="main">
+				<main class="main-music">
 					<h1 class="title">{{ musica.titulo }}</h1>
 					<h2 class="subtitle"><a href="/{{ musica.artista.slug }}">{{ musica.artista.nome }}</a></h2>
-					<pre>{{ musica.cifra | safe }}</pre>
+					<div class="music-content">
+						<pre class="music-cifra">{{ musica.cifra | safe }}</pre>
+					</div>
 				</main>
 
 				<aside class="sidebar-second">
