[CC] Add adsense verification

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,6 +16,13 @@
 
     {% block head %}{% endblock %}
 
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-7152225826245069",
+        enable_page_level_ads: true
+      });
+    </script>
 </head>
 
 <body>
